--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="sass/css/style.min.css">
 </head>
 <body>
     <div class="promo">
@@ -25,6 +25,29 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/main_screen/timer.png" alt="#">
+                        <div class="promo__text">Время подбора:<br>минут</div>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/main_screen/hand-cart.png" alt="#">
+                        <div class="promo__text">Бесплатная<br>доставка</div>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/main_screen/messages.png" alt="#">
+                        <div class="promo__text">Ответим<br>на все вопросы</div>
+                    </div>
+                </div>
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link"> или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+            
         </div>
     </div>
     
