--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="sass/css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <div id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="benefits__item">
-                    <img src="icons/advantages/heart.png" alt="heart">
+                    <img src="icons/advantages/heart.png" alt="heart" class="benefits_animated">
                     <div class="benefits__text">
                         <div class="benefits__text1">Заботимся о здоровье</div>
                         <div class="benefits__text2">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
@@ -448,6 +448,8 @@
 
 
     </div>
+    <a class="pageup" href="#up"><img src="icons/circle-chevron-up-solid.svg" alt="up"></a>
+    
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
